[JDK11] All tests pass using JDK11, 8.0.0.GA is approaching!